# data1

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTEXTO_GENERAL.md  LANGFUSE_INSTRUMENTATION_SPEC.md  README.md  TROUBLESHOOTING.md  alembic.ini  debug_hash.py  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml
airflow/: .dockerignore  Dockerfile  requirements.txt
alembic/: env.py
core/: README.md
dags/: __init__.py  hello_world.py
data/: golden_dataset_sample.json
docker/: .dockerignore  Dockerfile  Dockerfile.frontend  entrypoint.sh
docs/: README.md  demo-scenarios.md  email-requerimientos-ux-branding.md
evals/: README.md  __init__.py  conftest.py  run_eval.py  test_ambiguous.py  test_cache.py  (+6 more)
services/api/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 4f5c2df86346_initial_schema.py  a6e234523e27_add_messages.py  b8c8eb96e0ce_initial_schema.py  c1f2e3d4a5b6_add_oauth_fields.py
services/api/app/: main.py
services/api/app/application/services/: auth_service.py  chat_service.py  message_service.py  rag_client.py
services/api/app/core/: auth.py  config.py  security.py
services/api/app/domain/enums/: conversation_status.py  message_role.py  role_name.py  tenant_status.py
services/api/app/domain/models/: conversation.py  message.py  role.py  tenant.py  user.py
services/api/app/infrastructure/db/: deps.py  seed.py  session.py
services/api/app/infrastructure/db/orm/: __init__.py  conversation.py  message.py  message_source.py  role.py  tenant.py  user.py
services/api/app/infrastructure/db/repositories/: message_repo.py  role_repo.py  user_repo.py
services/api/app/infrastructure/http/: google_oauth.py  langfuse_client.py  rag_client.py
services/api/app/infrastructure/observability/: langfuse_client.py
services/api/app/presentation/http/routes/: access_test.py  auth.py  chat.py  health.py  messages.py  session.py
services/api/app/presentation/http/schemas/: auth.py  chat.py  message.py  oauth.py
services/api/app/scripts/: seed_roles.py
services/api/docs/: LANGFUSE_INTEGRATION.md  LANGGRAPH_RAG_INTEGRATION.md  README.md  RUNBOOK.md  STATUS.md  TODO.md  TROUBLESHOOTING.md  api-1.yaml
services/api/tests/: conftest.py  test_auth_routes.py  test_google_oauth.py
services/rag-generation/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/rag-generation/docs/: MEMORY_IMPLEMENTATION.md  memory-documentacion-oficial.md  pruebas-desde-front.md
services/rag-generation/src/: __init__.py  server.py
services/rag-generation/src/agents/: __init__.py  graph.py  input_normalization.py  memory.py  state.py
services/rag-generation/src/agents/orchestrator/: __init__.py  node.py  prompt.py
services/rag-generation/src/agents/private_agent/: __init__.py  node.py  prompt.py  tools.py
services/rag-generation/src/agents/public_agent/: __init__.py  node.py  prompt.py  tools.py
services/rag-generation/src/agents/routes/: __init__.py
services/rag-generation/src/agents/routes/classifier/: __init__.py  route.py
services/rag-generation/src/config/: __init__.py  llm_config.py
services/rag-generation/src/tools/: __init__.py  query_rewriter.py  vector_search.py
services/rag-generation/tests/: test_input_normalization.py
services/rag-indexation/: README.MD  contract.json  pyproject.toml  troubleshooting.md
services/rag-indexation/data-pipelines/index-base/pipeline-docx/: .env.example  QUICKSTART.md  README.md  docker-compose.yml  main.py  main_api.py  pyproject.toml  test_pipeline.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/: config.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/chunking/: chunker.py  semantic_chunker.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/db/: postgres.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/embeddings/: minilm_embedder.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/loaders/: docx_loader.py  local_loader.py  opentext_loader.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/models/: document.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/pipeline/: ingest_and_embed.py
services/rag-indexation/data-pipelines/index-base/pipeline-docx/src/utils/: text.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/: .env.example  GUIA_CAMBIO_A_API.md  QUICKSTART.md  commands.sh  debug_env.py  init.sql  pipeline_main.py  pyproject.toml  test_db_connection.py  test_embeddings.py  test_metadata.json  test_pipeline.py  test_psycopg3.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/: config.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/chunking/: chunker.py  deterministic_chunker.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/db/: postgres.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/embeddings/: openai_embedder.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/loaders/: local_loader.py  opentext_loader.py  pdf_loader.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/models/: document.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/pipeline/: ingest_and_embed.py
services/rag-indexation/data-pipelines/index-base/pipeline-pdfs/src/utils/: langfuse_client.py  text.py
services/rag-indexation/metadata-pipelines/: PIPELINE_DOCUMENTATION.md  pyproject.toml
services/rag-indexation/metadata-pipelines/config/: .env.example  config.py
services/rag-indexation/metadata-pipelines/src/: main.py
services/rag-indexation/metadata-pipelines/src/common/: checkpoint_manager.py  database_manager.py  logger.py  utils.py
services/rag-indexation/metadata-pipelines/src/pipeline/: metadata_pipeline.py
services/rag-indexation/metadata-pipelines/src/pipeline/queries/: count_changes.sql  extract_metadata.sql
(+471 files in other folders)
