[project]
name = "rag-generation"
version = "0.1.0"
description = "Servicio RAG multi-agente para plataforma empresarial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]