[project]
name = "metadata-pipelines"
version = "0.1.0"
description = "Pipeline de metadata estructurada para RAG Indexing Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.1",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"